force-app/main/default/objects/Places_Allotment__c/Places_Allotment__c.object-meta.xml
<CustomObject>
    <label>Places Packet</label>
    <nameField>
        <displayFormat>BAID-{000000}</displayFormat>
        <label>Places Packet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Places Packets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>