force-app/main/default/objects/Places_Allotment__c/fields/Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Planning_Region__c</fullName>
    <label>Aged Care Planning Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>