force-app/main/default/objects/Places_Allotment__c/fields/Care_Setting_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_Setting_Effective_Date__c</fullName>
    <label>Care Setting Effective Date</label>
    <type>Date</type>
</CustomField>