force-app/main/default/objects/Places_Allotment__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>