force-app/main/default/objects/Places_Allotment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Places_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>