force-app/main/default/objects/Places_Allotment__c/fields/First_Brought_into_Effect_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Brought_into_Effect_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>First Brought into Effect Date</label>
    <type>Date</type>
</CustomField>