force-app/main/default/objects/Places_Allotment__c/fields/GPMS_Expected_Offline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Expected_Offline_End_Date__c</fullName>
    <description>Expected the Places Offline End Date</description>
    <label>Expected Offline End Date</label>
    <type>Date</type>
</CustomField>