force-app/main/default/objects/Places_Allotment__c/fields/GPMS_Number_of_Remaining__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Number_of_Remaining__c</fullName>
    <description>Number of remaining places in the variation process</description>
    <formula>Number_of_Places__c -  GPMS_Number_of_Variation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>