force-app/main/default/objects/Places_Allotment__c/fields/GPMS_Number_of_Variation__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Number_of_Variation__c</fullName>
    <description>Number of Variation places</description>
    <label>Number of Variation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>