force-app/main/default/objects/Places_Allotment__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Packet ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>