force-app/main/default/objects/Places_Allotment__c/fields/Offline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Offline_End_Date__c</fullName>
    <label>Offline End Date</label>
    <type>Date</type>
</CustomField>