force-app/main/default/objects/Places_Allotment__c/fields/Packet_ID__c.field-meta.xml
<CustomField>
    <fullName>Packet_ID__c</fullName>
    <description>Reference for Integration Id</description>
    <formula>HYPERLINK(&apos;/&apos;+ Id ,  Integration_Id__c)</formula>
    <label>Packet ID</label>
    <type>Text</type>
</CustomField>