force-app/main/default/objects/Places_Allotment__c/fields/Packet_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Packet_Start_Date__c</fullName>
    <label>Packet Start Date</label>
    <type>Date</type>
</CustomField>