force-app/main/default/objects/Places_Allotment__c/fields/Parent_Packet__c.field-meta.xml
<CustomField>
    <fullName>Parent_Packet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent place of the current place</description>
    <label>Parent Packet</label>
    <referenceTo>Places_Allotment__c</referenceTo>
    <relationshipName>Places_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>