force-app/main/default/objects/Places_Allotment__c/fields/Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Effective_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Status Effective Date</label>
    <type>Date</type>
</CustomField>