force-app/main/default/objects/Places_Allotment__c/fields/Status_of_Places__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Places__c</fullName>
    <description>Status of current place packet</description>
    <label>Status of Places</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Ceased</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>