force-app/main/default/objects/Places_Allotment__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Status reason of current place packet</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S15-1 Provisional allocation (Provisional)</fullName>
            </value>
            <value>
                <fullName>S15-1 Determined to be in effect at time of allocation (Operational)</fullName>
            </value>
            <value>
                <fullName>Funding agreement signed (operational)</fullName>
            </value>
            <value>
                <fullName>S15-5 provider reduces number of places in provisional allocation</fullName>
            </value>
            <value>
                <fullName>S15-6 Provider surrenders provisional allocation</fullName>
            </value>
            <value>
                <fullName>S15-2 Not action taken in relation to provisional allocation</fullName>
                <label>S15-2 No action taken in relation to provisional allocation</label>
            </value>
            <value>
                <fullName>Places transferred in as offline</fullName>
            </value>
            <value>
                <fullName>Places varied in as offline</fullName>
            </value>
            <value>
                <fullName>Offline at time of migration</fullName>
            </value>
            <value>
                <fullName>Rebuilding</fullName>
            </value>
            <value>
                <fullName>Places not being used</fullName>
            </value>
            <value>
                <fullName>Provider expected to apply for transfer of places</fullName>
            </value>
            <value>
                <fullName>Provider expected to apply for variation of places</fullName>
            </value>
            <value>
                <fullName>Provider undertaking strategic review</fullName>
            </value>
            <value>
                <fullName>S18-2 Provider relinquishes places</fullName>
            </value>
            <value>
                <fullName>Funding agreement ceased</fullName>
            </value>
            <value>
                <fullName>Funding agreement reinstated</fullName>
            </value>
            <value>
                <fullName>Expired under S14-9(4)</fullName>
            </value>
            <value>
                <fullName>Places ceased under s18-1(c)</fullName>
            </value>
            <value>
                <fullName>Revocation of Provider’s Approval Status[s10-3]</fullName>
            </value>
            <value>
                <fullName>Revocation of Provisional Places, conditions not met[s15-4(1)]</fullName>
            </value>
            <value>
                <fullName>Revocation of Places [S66- 1(D)]</fullName>
            </value>
            <value>
                <fullName>Revocation of unused Places [S18-5(1)]</fullName>
            </value>
            <value>
                <fullName>S15-3 Application for determination approved</fullName>
            </value>
            <value>
                <fullName>Offline places made operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>