force-app/main/default/objects/Places_Allotment__c/validationRules/Packet_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>Packet_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This used to lock the record during the service combine process.</description>
    <errorConditionFormula>Allotment__r.Service_Name__r.GPMS_CombineLock__c</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>